--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -1,46 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="true"
+    android:layout_height="match_parent">
 
     <com.google.android.material.appbar.AppBarLayout
+        android:fitsSystemWindows="true"
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fitsSystemWindows="true"
         android:theme="@style/AppTheme.AppBarOverlay">
+
    <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:id="@+id/collapsingToolbar"
             android:layout_width="match_parent"
+            android:fitsSystemWindows="true"
             android:layout_height="256dp"
             android:minHeight="?attr/actionBarSize"
             app:contentScrim="@color/colorPrimary"
-            app:layout_scrollFlags="scroll|enterAlways">
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
        ​<androidx.viewpager.widget.ViewPager
+                android:fitsSystemWindows="true"
                 android:id="@+id/vpEventDetailImages"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_collapseMode="pin">
-
-
-            </androidx.viewpager.widget.ViewPager>
-
-            ​
+                android:layout_height="match_parent"
+                app:layout_collapseMode="parallax"/>
 
             <androidx.appcompat.widget.Toolbar
+                android:fitsSystemWindows="true"
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize" />
             ​
         </com.google.android.material.appbar.CollapsingToolbarLayout>
         ​
-        ​
     </com.google.android.material.appbar.AppBarLayout>
     ​
-
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
@@ -50,17 +47,14 @@
         app:layout_anchorGravity="bottom|end"
         app:srcCompat="@drawable/ic_star_white_24dp" />
     ​
-
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
         ​
-
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            ​
 
             <LinearLayout
                 android:id="@+id/llRequirements"
@@ -249,7 +243,7 @@
                 android:layout_marginEnd="@dimen/margin_medium_2"
                 android:textColor="@android:color/black"
 
-                tools:text="We believe in enjoing life to the fullest without having to compromise anything.
+                android:text="We believe in enjoing life to the fullest without having to compromise anything.
 			At John's Wedding Party, there will be beer, barbecues and a pool party too.
 			No need to worry as John will make sure to provide all of these facilities.
 			All you have to do is enjoy your drinks and dance.We believe in enjoing life to the fullest without having to compromise anything.
@@ -269,8 +263,5 @@
         </RelativeLayout>
         ​
     </androidx.core.widget.NestedScrollView>
-    ​
-
-    ​
     ​
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
